Closed Bug 1851071 Opened 1 year ago Closed 1 year ago

Intermittent OSX Cross Compiled gfx/thebes/gfxMacPlatformFontList.mm:427:15: error: unused variable 'kTextDisplayCrossover' [-Werror,-Wunused-const-variable]

Categories

(Core :: Graphics, defect, P5)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox117 --- unaffected
firefox118 --- unaffected
firefox119 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=427648693&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/EASHaF9_SfahNzThAHqgJQ/runs/0/artifacts/public/logs/live_backing.log


[task 2023-08-31T23:27:56.131Z] 23:27:56    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxMacPlatformFontList.mm:427:15: error: unused variable 'kTextDisplayCrossover' [-Werror,-Wunused-const-variable]
[task 2023-08-31T23:27:56.131Z] 23:27:56     INFO -  const CGFloat kTextDisplayCrossover = 20.0;  // use text family below this size
[task 2023-08-31T23:27:56.131Z] 23:27:56     INFO -                ^
[task 2023-08-31T23:27:56.131Z] 23:27:56     INFO -  1 error generated.
[task 2023-08-31T23:27:56.132Z] 23:27:56    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: gfxMacPlatformFontList.o] Error 1
[task 2023-08-31T23:27:56.132Z] 23:27:56     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2023-08-31T23:27:56.133Z] 23:27:56     INFO -  gmake[4]: Target 'target-objects' not remade because of errors.
Summary: Intermittent /builds/worker/checkouts/gecko/gfx/thebes/gfxMacPlatformFontList.mm:427:15: error: unused variable 'kTextDisplayCrossover' [-Werror,-Wunused-const-variable] → Intermittent OSX Cross Compiled gfx/thebes/gfxMacPlatformFontList.mm:427:15: error: unused variable 'kTextDisplayCrossover' [-Werror,-Wunused-const-variable]

Hi, Jonathan, this seems to be caused by Bug 1170986.
Can you take a look, please?
Thank you.

Flags: needinfo?(jfkthame)
Keywords: regression
Regressed by: 1170986

This has moved to CoreTextFontList.cpp, but accidentally got left here as well; we can just remove it.

(Bug 1850883 will eliminate it altogether, but I'll just do the trivial thing here and leave the more extensive cleanup for that bug.)

Flags: needinfo?(jfkthame)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/51bf4bb98f73 Remove stray unused variable. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: