Bug 1851071 - Remove stray unused variable. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D187261